deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-container
        image: 221242524113.dkr.ecr.ap-northeast-2.amazonaws.com/videoweb:latest
        ports:
        - containerPort: 80
          protocol: TCP
        imagePullPolicy: Always
